--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Qtpass : QtPass is a multi-platform gui for pass">
+    <meta name="description" content="QtPass : QtPass is a multi-platform gui for pass">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/IJHack/qtpass">View on GitHub</a>
 
-          <h1 id="project_title">Qtpass</h1>
+          <h1 id="project_title">QtPass</h1>
           <h2 id="project_tagline">QtPass is a multi-platform gui for pass</h2>
 
             <section id="downloads">
@@ -41,7 +41,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Qtpass maintained by <a href="https://github.com/IJHack">IJHack</a></p>
+        <p class="copyright">QtPass maintained by <a href="https://github.com/IJHack">IJHack</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
