--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a name="qtpass" class="anchor" href="#qtpass"><span class="octicon octicon-link"></span></a>qtpass</h1>
 
-<p>QtPass is a multi-platform gui for pass</p>
+<p>QtPass is a multi-platform gui for pass. It is currently in a pre-alpha state.</p>
       </section>
     </div>
 
