--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/IJHack/qtpass">View on GitHub</a>
 
           <h1 id="project_title">QtPass</h1>
-          <h2 id="project_tagline">QtPass is a multi-platform gui for pass</h2>
+          <h2 id="project_tagline">A multi-platform gui for pass</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/IJHack/qtpass/zipball/master">Download this project as a .zip file</a>
