--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
 
 <p>QtPass is a multi-platform gui for <a href="http://www.passwordstore.org/" target="_blank">pass</a>. It is currently in a pre-alpha state.</p>
       </section>
+      
+      <section id="features">
+        <h1>Features:</h1>
+        <ul>
+          <li>Reading pass password stores</li>
+          <li>Decrypting and displaying the password info</li>
+          <li>Updating from the git repository</li>
+          <li>Read operations also supported without pass (using gpg and git)</li>
+          <li>Configuration options for backends and executable/folder locations</li>
+          <li>Tested on Linux and OSX</li>
+        </ul>
+      </section>
     </div>
 
     <!-- FOOTER  -->
