--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a name="qtpass" class="anchor" href="#qtpass"><span class="octicon octicon-link"></span></a>qtpass</h1>
+<a name="qtpass" class="anchor" href="#qtpass"><span class="octicon octicon-link"></span></a>QtPass</h1>
 
 <p>QtPass is a multi-platform gui for <a href="http://www.passwordstore.org/" target="_blank">pass</a>. It is currently in a pre-alpha state.</p>
       </section>
       
-      <section id="features">
+      <section id="features" class="inner">
         <h1>Features:</h1>
         <ul>
           <li>Reading pass password stores</li>
