--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a name="qtpass" class="anchor" href="#qtpass"><span class="octicon octicon-link"></span></a>QtPass</h1>
 
-<p>QtPass is a multi-platform gui for <a href="http://www.passwordstore.org/" target="_blank">pass</a>. It is currently in a pre-alpha state.</p>
+<p>QtPass is a multi-platform gui for <a href="http://www.passwordstore.org/" target="_blank">pass</a>. It is currently in a alpha state.</p>
       </section>
       
       <section id="features" class="inner">
@@ -45,7 +45,9 @@
           <li>Updating from the git repository</li>
           <li>Read operations also supported without pass (using gpg and git)</li>
           <li>Configuration options for backends and executable/folder locations</li>
-          <li>Tested on Linux and OSX</li>
+          <li>Copying password to clipboard</li>
+          <li>Hiding of password agains shouldersurfing</li>
+	  <li>Tested on Linux and <a href="https://annejan.com/media/qtpass.dmg">OSX</a></li>
         </ul>
       </section>
     </div>
