--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>QtPass is a multi-platform gui for <a href="http://www.passwordstore.org/" target="_blank">pass</a>. It is currently in a alpha state.</p>
       </section>
-      
+
       <section id="features" class="inner">
         <h1>Features:</h1>
         <ul>
@@ -47,8 +47,10 @@
           <li>Configuration options for backends and executable/folder locations</li>
           <li>Copying password to clipboard</li>
           <li>Hiding of password agains shouldersurfing</li>
-	  <li>Tested on Linux and <a href="https://annejan.com/media/qtpass.dmg">OSX</a></li>
-        </ul>
+		  <li>Tested on Linux and <a href="https://annejan.com/media/qtpass.dmg">OSX</a></li>
+        </ul>   
+        <img src="images/qtpass.png" alt="QtPass alpha" />
+        <img src="images/config.png" alt="QtPass alpha configuration" />
       </section>
     </div>
 
