--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
           <li>Copying password to clipboard</li>
           <li>Hiding of password agains shouldersurfing</li>
 		  <li>Tested on Linux and <a href="https://annejan.com/media/qtpass.dmg">OSX</a></li>
-        </ul>   
-        <img src="images/qtpass.png" alt="QtPass alpha" />
-        <img src="images/config.png" alt="QtPass alpha configuration" />
+        </ul>
+        <div class="screenshots">   
+        	<img id="qtpass" src="images/qtpass.png" alt="QtPass alpha" />
+        	<img id="config" class="hidden" src="images/config.png" alt="QtPass alpha configuration" />
+        </div>
       </section>
     </div>
 
@@ -63,6 +65,6 @@
     </div>
 
     
-
+	<script src="javascripts/main.js"></script>
   </body>
 </html>
