Adding and editing added

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <li>Reading pass password stores</li>
           <li>Decrypting and displaying the password info</li>
           <li>Updating from the git repository</li>
+	  <li>Editing and adding of passwords</li>
           <li>Read operations also supported without pass (using gpg and git)</li>
           <li>Configuration options for backends and executable/folder locations</li>
           <li>Copying password to clipboard</li>
