--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
           <li>Decrypting and displaying the password info</li>
           <li>Updating from the git repository</li>
 	  <li>Editing and adding of passwords</li>
+	  <li>Adding and removing people from gpg-id per folder</li>
           <li>Read operations also supported without pass (using gpg and git)</li>
           <li>Configuration options for backends and executable/folder locations</li>
           <li>Copying password to clipboard</li>
           <li>Hiding of password agains shouldersurfing</li>
-		  <li>Tested on Linux and <a href="https://annejan.com/media/qtpass.dmg">OSX</a></li>
+          <li>Tested on Linux and <a href="https://annejan.com/media/qtpass.dmg">OSX</a></li>
         </ul>
         <div class="screenshots">   
         	<img id="qtpass" src="images/qtpass.png" alt="QtPass alpha" />
