--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <li>Configuration options for backends and executable/folder locations</li>
           <li>Copying password to clipboard</li>
           <li>Hiding of password agains shouldersurfing</li>
+          <li>Experimental WebDAV support </li>
           <li>Tested on Linux and <a href="https://annejan.com/media/qtpass.dmg">OSX</a></li>
         </ul>
         <div class="screenshots">   
