--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li>Copying password to clipboard</li>
           <li>Hiding of password agains shouldersurfing</li>
           <li>Experimental WebDAV support </li>
-          <li>Tested on Linux and <a href="https://annejan.com/media/qtpass.dmg">OSX</a></li>
+          <li>Tested on Linux, <a href="https://annejan.com/media/qtpass.dmg">OSX</a> and Windows</li>
         </ul>
         <div class="screenshots">   
         	<img id="qtpass" src="images/qtpass.png" alt="QtPass alpha" />
