--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li>Read operations also supported without pass (using gpg and git)</li>
           <li>Configuration options for backends and executable/folder locations</li>
           <li>Copying password to clipboard</li>
-          <li>Hiding of password agains shouldersurfing</li>
+          <li>Hiding of password against shouldersurfing</li>
           <li>Experimental WebDAV support </li>
           <li>Tested on Linux, <a href="https://annejan.com/media/qtpass.dmg">OSX</a> and Windows</li>
         </ul>
