--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a name="qtpass" class="anchor" href="#qtpass"><span class="octicon octicon-link"></span></a>QtPass</h1>
 
-<p>QtPass is a multi-platform gui for <a href="http://www.passwordstore.org/" target="_blank">pass</a>. It is currently in a alpha state.</p>
+<p>QtPass is a multi-platform gui for <a href="http://www.passwordstore.org/" target="_blank">pass</a>.</p>
       </section>
 
       <section id="features" class="inner">
