--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
           <li><a href="https://github.com/IJHack/qtpass/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/IJHack/qtpass">View On <strong>GitHub</strong></a></li>
         </ul>
+        <div class="screenshots">   
+        	<img id="qtpass" src="images/qtpass.png" alt="QtPass alpha" />
+        	<img id="config" class="hidden" src="images/config.png" alt="QtPass alpha configuration" />
+        </div>
       </header>
       <section>
         <h2>
@@ -99,6 +103,6 @@ Unfortunately I do not know of any WebDAV service with OTP support except ownClo
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+    <script src="javascripts/main.js"></script>
   </body>
 </html>
