--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <li><a href="https://github.com/IJHack/qtpass">View On <strong>GitHub</strong></a></li>
         </ul>
         <div class="screenshots">   
-        	<img id="qtpass" src="images/qtpass.png" alt="QtPass alpha" />
-        	<img id="config" class="hidden" src="images/config.png" alt="QtPass alpha configuration" />
+        	<img id="qtpass" src="images/qtpass.png" alt="QtPass beta" />
+        	<img id="config" class="hidden" src="images/config.png" alt="QtPass configuration" />
         </div>
       </header>
       <section>
