--- a/index.html
+++ b/index.html
@@ -37,9 +37,16 @@
 
 <ul>
 <li>Using <a href="http://www.passwordstore.org/">pass</a> or git and gpg2 directly</li>
-<li>Configurable shoulder surfing protection options</li>
-<li>Cross platform: Linux, BSD, OS X and Windows</li>
+<li>Cross platform: Linux, BSD, <a href="https://annejan.com/media/qtpass.dmg">OS X</a> and Windows</li>
+<li>Reading pass password stores</li>
+<li>Decrypting and displaying the password info</li>
+<li>Updating from the git repository</li>
+<li>Editing and adding of passwords</li>
 <li>Per-folder user selection for multi recipient encryption</li>
+<li>Configuration options for backends and executable/folder locations</li>
+<li>Copying password to clipboard</li>
+<li>Configurable shoulder surfing protection options</li>
+<li>Experimental WebDAV support </li>
 </ul>
 
 <p>While QtPass will work with Qt4, currently multi-line editing is restricted to Qt5 only.</p>
