--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <li>Experimental WebDAV support </li>
 </ul>
 
-<p>While QtPass will work with Qt4, currently multi-line editing is restricted to Qt5 only.</p>
+<p>While QtPass will work with Qt4, currently multi-line editing is restricted to Qt5.</p>
 
 <h2>
 <a id="security-considerations" class="anchor" href="#security-considerations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Security considerations</h2>
@@ -100,9 +100,8 @@ Unfortunately I do not know of any WebDAV service with OTP support except ownClo
 <code>qmake &amp;&amp; make &amp;&amp; make install</code></p>
 
 <p>On MacOsX:
-<code>qmake &amp;&amp; make &amp;&amp; macdeployqt QtPass.app -dmg</code></p>
-
-<p>Currently seems to only work with MacGPG2</p>
+<code>qmake &amp;&amp; make &amp;&amp; macdeployqt QtPass.app -dmg</code><br />
+Currently seems to only work with MacGPG2</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/IJHack">IJHack</a></p>
