styling and wording

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <![endif]-->
   </head>
   <body>
+    <div class="background"></div>
     <div class="wrapper">
       <header>
         <h1>QtPass</h1>
@@ -26,6 +27,11 @@
           <li><a href="https://github.com/IJHack/qtpass/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/IJHack/qtpass">View On <strong>GitHub</strong></a></li>
         </ul>
+        <ul>
+          <li><a href="https://annejan.com/media/qtpass.dmg">Mac OS X<strong>DMG</strong></a></li>
+	  <li></li>
+          <li><a href="http://passwordstore.org/">zx2c4<strong style="text-transform: uppercase;">pass</strong></a></li>
+        </ul>
         <div class="screenshots">   
         	<img id="qtpass" src="images/qtpass.png" alt="QtPass beta" />
         	<img id="config" class="hidden" src="images/config.png" alt="QtPass configuration" />
@@ -37,11 +43,11 @@
 
 <ul>
 <li>Using <a href="http://www.passwordstore.org/">pass</a> or git and gpg2 directly</li>
-<li>Cross platform: Linux, BSD, <a href="https://annejan.com/media/qtpass.dmg">OS X</a> and Windows</li>
-<li>Reading pass password stores</li>
-<li>Decrypting and displaying the password info</li>
-<li>Updating from the git repository</li>
-<li>Editing and adding of passwords</li>
+<li>Cross platform: Linux, BSD, OS X and Windows</li>
+<li>Reading pass <a href="http://www.passwordstore.org/">password stores</a></li>
+<li>Decrypting and displaying the password and related info</li>
+<li>Editing and adding of passwords and information</li>
+<li>Updating to and from a git repository</li>
 <li>Per-folder user selection for multi recipient encryption</li>
 <li>Configuration options for backends and executable/folder locations</li>
 <li>Copying password to clipboard</li>
