Added: the standard unix password manager

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="wrapper">
       <header>
         <h1>QtPass</h1>
-        <p>QtPass is a multi-platform GUI for pass</p>
+        <p>QtPass is a multi-platform GUI for <a href="http://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view"><a href="https://github.com/IJHack/qtpass">View the Project on GitHub <small>IJHack/qtpass</small></a></p>
 
