--- a/index.html
+++ b/index.html
@@ -108,11 +108,18 @@ Unfortunately I do not know of any WebDAV service with OTP support except ownClo
 <a id="planned-features" class="anchor" href="#planned-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Planned features</h2>
 
 <ul>
-<li>WebDAV support (configuration)</li>
-<li>Templates (username, url etc)</li>
-<li>First use wizards to set up password-store</li>
+<li>WebDAV (configuration) support</li>
+<li>Showing path in Add and Edit screen (currently sometimes confusing where I'm adding this password)</li>
+<li>Templates (username, url etc) in Add / Edit screen (configurable templates)</li>
+<li>Password generation with options for what kind you'd like</li>
+<li>First use wizards to set up password-store (and decryption key, currently always the gpg default key)</li>
+<li>Right click handlers for file/folder and content</li>
+<li>Opening of (basic auth) urls in default browser? Possibly with helper plugin for filling out forms?</li>
+<li>Colour coding or disabling of people you can't encrypt for (trust settings) in User management</li>
 <li>Colour coding folders (possibly disabling folders you can't decrypt)</li>
+<li>Profiles (to allow use of multiple password stores and decryption keys) with dropdown in main screen</li>
 <li>Optional table view of decrypted folder contents</li>
+<li>Some other form of remote storage that allows for accountability / auditing (web API to retreive the .gpg files?)</li>
 </ul>
 
 <h2>
