--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@ Unfortunately I do not know of any WebDAV service with OTP support except ownClo
 </ul>
 
 <h2>
+<a id="known-issues" class="anchor" href="#known-issues" aria-hidden="true"><span class="octicon octicon-link"></span></a>Known issues</h2>
+
+<ul>
+<li>Filtering (searching) breaks the tree/model sometimes </li>
+<li>Starting without a correctly set password-store folder give weird results in the tree view</li>
+<li>On Mac OS X only the gpgtools MacGPG2 version works with passphrase or PIN</li>
+<li>Multi-line editing only works with Qt5 currently</li>
+</ul>
+
+<h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
 <p>On most systems all you need is:
