--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
         <h1>QtPass</h1>
         <p>QtPass is a multi-platform GUI for <a href="http://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
-        <p class="view"><a href="https://github.com/IJHack/qtpass">View the Project on GitHub <small>IJHack/qtpass</small></a> <a href="https://travis-ci.org/IJHack/qtpass"><img src="https://travis-ci.org/IJHack/qtpass.svg?branch=master" alt="Build Status" data-canonical-src="https://travis-ci.org/IJHack/qtpass.svg?branch=master" style="max-width:100%;"></a></p>
+        <p class="view">
+        	<a href="https://github.com/IJHack/qtpass">View the Project on GitHub <small>IJHack/qtpass</small></a> 
+        	<a href="https://travis-ci.org/IJHack/qtpass"><img src="https://travis-ci.org/IJHack/qtpass.svg?branch=master" alt="Build Status" data-canonical-src="https://travis-ci.org/IJHack/qtpass.svg?branch=master" style="max-width:100%;"></a>
+        	<a href="https://scan.coverity.com/projects/5266"><img alt="Coverity Scan Build Status" src="https://scan.coverity.com/projects/5266/badge.svg"/></a>
+        </p>
 
         <ul>
           <li><a href="https://github.com/IJHack/qtpass/tarball/master">Download <strong>TAR Ball</strong></a></li>
