--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>QtPass by IJHack</title>
+    <title>QtPass multi-platform GUI for pass, the standard unix password manager</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -49,7 +49,7 @@
         </ul>
         <ul>
           <li><a href="https://annejan.com/media/qtpass.dmg">Mac OS X<strong>DMG</strong></a></li>
-	  <li></li>
+	  <li><a href="https://annejan.com/media/qtpass.exe">Windows<strong>EXE</strong></a></li>
           <li><a href="http://passwordstore.org/">zx2c4<strong style="text-transform: uppercase;">pass</strong></a></li>
         </ul>
         <div class="screenshots">   
@@ -112,17 +112,18 @@ Unfortunately I do not know of any WebDAV service with OTP support except ownClo
 <a id="planned-features" class="anchor" href="#planned-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Planned features</h2>
 
 <ul>
-<li>WebDAV (configuration) support</li>
+<li>Re-encryption after users-change (optional ofcourse)</li>
 <li>Showing path in Add and Edit screen (currently sometimes confusing where I'm adding this password)</li>
-<li>Templates (username, url etc) in Add / Edit screen (configurable templates)</li>
-<li>Password generation with options for what kind you'd like</li>
-<li>First use wizards to set up password-store (and decryption key, currently always the gpg default key)</li>
 <li>Right click handlers for file/folder and content</li>
-<li>Opening of (basic auth) urls in default browser? Possibly with helper plugin for filling out forms?</li>
-<li>Colour coding or disabling of people you can't encrypt for (trust settings) in User management</li>
+<li><del>First use wizards to set up password-store (and decryption key, currently always the gpg default key)</del></li>
+<li><del>Profiles (to allow use of multiple password stores and decryption keys) with dropdown in main screen</del></li>
+<li>Password generation with options for what kind you'd like</li>
+<li>Templates (username, url etc) in Add / Edit screen (configurable templates)</li>
+<li><del>Colour coding or disabling of people you can't encrypt for (trust settings) in User management</del></li>
 <li>Colour coding folders (possibly disabling folders you can't decrypt)</li>
-<li>Profiles (to allow use of multiple password stores and decryption keys) with dropdown in main screen</li>
+<li>WebDAV (configuration) support</li>
 <li>Optional table view of decrypted folder contents</li>
+<li>Opening of (basic auth) urls in default browser? Possibly with helper plugin for filling out forms?</li>
 <li>Some other form of remote storage that allows for accountability / auditing (web API to retreive the .gpg files?)</li>
 </ul>
 
@@ -131,7 +132,6 @@ Unfortunately I do not know of any WebDAV service with OTP support except ownClo
 
 <ul>
 <li>Filtering (searching) breaks the tree/model sometimes </li>
-<li>Starting without a correctly set password-store folder give weird results in the tree view</li>
 <li>On Mac OS X only the gpgtools MacGPG2 version works with passphrase or PIN</li>
 <li>Multi-line editing only works with Qt5 currently</li>
 </ul>
