--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <li><a href="https://github.com/IJHack/qtpass/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/IJHack/qtpass">View On <strong>GitHub</strong></a></li>
         </ul>
+        <p>Version 0.8.4</p>
         <ul>
           <li><a href="https://annejan.com/media/qtpass.dmg">Mac OS X<strong>DMG</strong></a></li>
 	  <li><a href="https://annejan.com/media/qtpass.exe">Windows<strong>EXE</strong></a></li>
@@ -113,8 +114,8 @@ Unfortunately I do not know of any WebDAV service with OTP support except ownClo
 
 <ul>
 <li>Re-encryption after users-change (optional ofcourse)</li>
-<li>Showing path in Add and Edit screen (currently sometimes confusing where I'm adding this password)</li>
-<li>Right click handlers for file/folder and content</li>
+<li><del>Showing path in Add and Edit screen (currently sometimes confusing where I'm adding this password)</del></li>
+<li><del>Right click handlers for file/folder and content</del></li>
 <li><del>First use wizards to set up password-store (and decryption key, currently always the gpg default key)</del></li>
 <li><del>Profiles (to allow use of multiple password stores and decryption keys) with dropdown in main screen</del></li>
 <li>Password generation with options for what kind you'd like</li>
