--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="background"></div>
     <div class="wrapper">
       <header>
-        <h1>QtPass</h1>
+        <h1>QtPass <small>beta</small></h1>
         <p>QtPass is a multi-platform GUI for <a href="http://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
@@ -43,14 +43,9 @@
         </p>
 
         <ul>
-          <li><a href="https://github.com/IJHack/qtpass/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/IJHack/qtpass/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/IJHack/qtpass/releases">Download <strong>Releases</strong></a></li>
+          <li><a href="https://github.com/IJHack/qtpass/tarball/master">Latest <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/IJHack/qtpass">View On <strong>GitHub</strong></a></li>
-        </ul>
-        <ul>
-          <li><a href="https://annejan.com/media/qtpass.dmg">Mac OS X<strong>DMG</strong></a></li>
-	  <li><a href="https://annejan.com/media/qtpass.exe">Windows<strong>EXE</strong></a></li>
-          <li><a href="http://passwordstore.org/">zx2c4<strong style="text-transform: uppercase;">pass</strong></a></li>
         </ul>
         
 	<div class="screenshots">   
