--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Unfortunately I do not know of any WebDAV service with OTP support except ownClo
 <li><del>Right click handlers for file/folder and content</del></li>
 <li><del>First use wizards to set up password-store (and decryption key, currently always the gpg default key)</del></li>
 <li><del>Profiles (to allow use of multiple password stores and decryption keys) with dropdown in main screen</del></li>
-<li>Password generation with options for what kind you'd like</li>
+<li><del>Password generation with options for what kind you'd like</del></li>
 <li>Templates (username, url etc) in Add / Edit screen (configurable templates)</li>
 <li><del>Colour coding or disabling of people you can't encrypt for (trust settings) in User management</del></li>
 <li>Colour coding folders (possibly disabling folders you can't decrypt)</li>
@@ -128,7 +128,6 @@ Unfortunately I do not know of any WebDAV service with OTP support except ownClo
 <ul>
 <li>Filtering (searching) breaks the tree/model sometimes </li>
 <li>On Mac OS X only the gpgtools MacGPG2 version works with passphrase or PIN</li>
-<li>Multi-line editing only works with Qt5 currently</li>
 </ul>
 
 <h2>
